<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dino_bg"
    android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">
        <!--Question 1-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="#00C853"
            android:text="@string/question1" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/question1_title" />
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/answer1">
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="#eee"
                android:buttonTint="#eee"
                android:id="@+id/around100"
                android:text="@string/around100"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="#eee"
                android:buttonTint="#eee"
                android:id="@+id/around300"
                android:text="@string/around300"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="#eee"
                android:buttonTint="#eee"
                android:id="@+id/around700"
                android:text="@string/around700"/>


        </RadioGroup>


        <!--Question2-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="#00C853"
            android:text="@string/question2" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question2_title" />
        <EditText
            android:id="@+id/answer_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_your_answer"
            android:textColor="#eee"
            android:textColorHint="#808080"
            android:inputType="textCapWords" />

        <!--Question3-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="#00C853"
            android:text="@string/question3" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question3_title" />
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/answer3"
            android:orientation="horizontal">
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="#eee"
                android:buttonTint="#eee"
                android:layout_marginRight="16dp"
                android:id="@+id/yes"
                android:text="@string/yes"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="#eee"
                android:buttonTint="#eee"
                android:id="@+id/no"
                android:text="@string/no"/>


        </RadioGroup>


        <!--Question4-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="#00C853"
            android:text="@string/question4" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question4_title" />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bees"
            android:buttonTint="#eee"
            android:id="@+id/answer4_1"
            android:textColor="#eee" />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/snails"
            android:buttonTint="#eee"
            android:id="@+id/answer4_2"
            android:textColor="#eee" />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/panda"
            android:buttonTint="#eee"
            android:textColor="#eee"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lion"
            android:buttonTint="#eee"
            android:textColor="#eee" />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/answer4_3"
            android:text="@string/turtles"
            android:buttonTint="#eee"
            android:textColor="#eee" />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/answer4_4"
            android:text="@string/sharks"
            android:buttonTint="#eee"
            android:textColor="#eee" />

        <!--Question5-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="#00C853"
            android:text="@string/question5" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question5_title" />
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/answer5">
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="#eee"
                android:buttonTint="#eee"
                android:id="@+id/trex"
                android:text="@string/trex"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="#eee"
                android:buttonTint="#eee"
                android:id="@+id/apatosaurs"
                android:text="@string/apatosaurs"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="#eee"
                android:buttonTint="#eee"
                android:id="@+id/gorgosaurus"
                android:text="@string/gorgosaurus"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="#eee"
                android:buttonTint="#eee"
                android:id="@+id/baryonyx"
                android:text="@string/baryonyx"/>


        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/resultMsg"
            android:text="@string/resultMessage" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingTop="16dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="submit"
                android:text="@string/submit"
                android:backgroundTint="#00C853"
                android:textAllCaps="true"
                android:layout_margin="10dp"/>




        </LinearLayout>

    </LinearLayout>

</ScrollView>